All Task/Task-13/lb.tf
resource "aws_lb" "test" {
  name               = "test-lb-tf"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.sg.id]
  subnets            = [aws_subnet.db.id]

  enable_deletion_protection = true



  tags = {
    Environment = "production"
  }
}
